added alt for images

--- a/pages/description1.html
+++ b/pages/description1.html
@@ -11,7 +11,12 @@
     <ul>
       <li>
         <h3>Playing Basketball</h3>
-        <img src="../images/Basketball.jpeg" height="100px" width="100px" />
+        <img
+          src="../images/Basketball.jpeg"
+          height="100px"
+          width="100px"
+          alt="image of a Basketball"
+        />
         <p>
           One of my favorite things to do is get exercise. I like playing
           basketball with friends as its a good way to get cardio and to work
