--- a/pages/description2.html
+++ b/pages/description2.html
@@ -11,7 +11,12 @@
     <ul>
       <li>
         <h3>Watching Football</h3>
-        <img src="../images/herbert.jpg" height="100px" width="100px" />
+        <img
+          src="../images/herbert.jpg"
+          height="100px"
+          width="100px"
+          alt="image of a Football player"
+        />
         <p>
           I like watching Football as well as playing it. My favorite team is
           the Chargers
