--- a/pages/description3.html
+++ b/pages/description3.html
@@ -11,7 +11,12 @@
     <ul>
       <li>
         <h3>Learning</h3>
-        <img src="../images/matrix.jpeg" height="100px" width="100px" />
+        <img
+          src="../images/matrix.jpeg"
+          height="100px"
+          width="100px"
+          alt="image from the movie The Matrix"
+        />
         <p>
           I watch youtube pretty much everyday as I like learning about many
           subjects and topics
