--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -12,17 +12,32 @@
     <ul>
       <li>
         <h4>Playing Basketball</h4>
-        <img src="../images/Basketball.jpeg" width="100" height="100" />
+        <img
+          src="../images/Basketball.jpeg"
+          width="100"
+          height="100"
+          alt="image of a basketball"
+        />
         <a href="./description1.html">Description</a>
       </li>
       <li>
         <h4>Watching Football</h4>
-        <img src="../images/herbert.jpg" width="100" height="100" />
+        <img
+          src="../images/herbert.jpg"
+          width="100"
+          height="100"
+          alt="image of a Football player"
+        />
         <a href="./description2.html">Description</a>
       </li>
       <li>
         <h4>Watching Youtube and Learning</h4>
-        <img src="../images/matrix.jpeg" width="100" height="100" />
+        <img
+          src="../images/matrix.jpeg"
+          width="100"
+          height="100"
+          alt="image from the movie The Matrix"
+        />
         <a href="./description3.html">Description</a>
       </li>
     </ul>
